--- a/src/style.css
+++ b/src/style.css
@@ -751,6 +751,7 @@ input:checked + .slider:before {
 
 .help-modal--close-btn span {
   border-radius: 0.2rem;
+  transition: background-color 200ms ease-in-out, color 200ms ease-in-out;
 }
 
 .help-modal--close-btn:hover span {
