--- a/src/style.css
+++ b/src/style.css
@@ -682,7 +682,7 @@ input:checked + .slider:before {
   transition: background-color 200ms ease, color 200ms ease-in-out;
 }
 
-.help-modal-container {
+.modal-container {
   opacity: 0;
   pointer-events: none;
   position: fixed;
@@ -690,12 +690,12 @@ input:checked + .slider:before {
   transition: opacity 200ms ease-in-out;
 }
 
-.help-modal-container.show {
+.modal-container.show {
   opacity: 1;
   pointer-events: all;
 }
 
-.help-modal-container .help-modal-overlay {
+.modal-container .modal-overlay {
   position: fixed;
   width: 100%;
   height: 100%;
@@ -703,13 +703,13 @@ input:checked + .slider:before {
   transition: background-color 200ms ease-in-out;
 }
 
-.help-modal-container.show .help-modal-overlay {
+.modal-container.show .modal-overlay {
   background-color: rgba(0, 0, 0, 0.379);
 }
 
-.help-modal-container .help-modal {
+.modal-container .modal {
   width: 800px;
-  height: 550px;
+  height: auto;
   padding: 1rem;
   background-color: var(--notepad-cont-bg);
   position: absolute;
@@ -721,22 +721,24 @@ input:checked + .slider:before {
   box-shadow: 0 0.5rem 5rem rgba(0, 0, 0, 0.5);
 }
 
-.help-modal-container.show .help-modal {
+.modal-container.show .modal {
   transform: translate(-50%, -50%) scale(1);
 }
 
-.help-modal--header {
+.modal--header {
   border-bottom: 1px solid var(--border-color);
   display: flex;
   align-items: center;
   /* justify-content: center; */
 }
-.help-modal--header__heading {
+
+.modal--header__heading {
   flex: 1;
   text-align: center;
   color: var(--text-color);
 }
-.help-modal--close-btn {
+
+.modal--close-btn {
   display: block;
   font-size: 2.2rem;
   background-color: transparent;
@@ -748,17 +750,17 @@ input:checked + .slider:before {
   height: fit-content;
 }
 
-.help-modal--close-btn span {
+.modal--close-btn span {
   border-radius: 0.2rem;
   transition: background-color 200ms ease-in-out, color 200ms ease-in-out;
 }
 
-.help-modal--close-btn:hover span {
+.modal--close-btn:hover span {
   background-color: var(--text-color);
   color: var(--notepad-cont-bg);
 }
 
-.help-modal--body {
+.modal--body {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -791,6 +793,46 @@ input:checked + .slider:before {
   font-size: 1.1rem;
   color: var(--text-color);
   box-shadow: 0 0.1rem 0.1rem rgba(0, 0, 0, 0.1);
+}
+
+.confirm-modal--body {
+  display: block;
+  padding: 1rem;
+}
+
+.confirm-modal--body__text {
+  padding: 1rem 0;
+}
+
+.confirm-modal--actions {
+  display: flex;
+  justify-content: right;
+  gap: 1rem;
+}
+
+.confirm-modal--actions__confirm-btn {
+  border: 1px solid var(--red);
+  color: var(--red);
+  padding: 0.3rem;
+  font-size: 1rem;
+}
+
+.confirm-modal--actions__confirm-btn:hover {
+  color: var(--site-bg);
+  cursor: pointer;
+  background-color: var(--red);
+}
+
+.confirm-modal--actions__cancel-btn {
+  outline: none;
+  background-color: transparent;
+  color: var(--text-color);
+  padding: 0.3rem;
+  border-radius: 0.3rem;
+  font-weight: bold;
+  font-size: 1rem;
+  cursor: pointer;
+  border: 1px solid transparent;
 }
 
 .center {
